config/tools (resources) gemspec_packer added

--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -5,3 +5,4 @@ vagrant:         'swag_dev/project/tools/vagrant'
 gemspec_writer:  'swag_dev/project/tools/gemspec/writer'
 gemspec_reader:  'swag_dev/project/tools/gemspec/reader'
 gemspec_builder: 'swag_dev/project/tools/gemspec/builder'
+gemspec_packer:  'swag_dev/project/tools/gemspec/packer'
