--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -6,3 +6,4 @@ gemspec_writer:  'swag_dev/project/tools/gemspec/writer'
 licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
 vagrant:         'swag_dev/project/tools/vagrant'
+yardoc:          'swag_dev/project/tools/yardoc'
