config/tools (resources) yardoc_watcher added

--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -7,3 +7,4 @@ licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
 vagrant:         'swag_dev/project/tools/vagrant'
 yardoc:          'swag_dev/project/tools/yardoc'
+yardoc_watcher:  'swag_dev/project/tools/yardoc/watcher'
