config/tools (resources) console added

--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -1,4 +1,5 @@
 ---
+console:         'swag_dev/project/tools/console'
 gemspec_builder: 'swag_dev/project/tools/gemspec/builder'
 gemspec_packer:  'swag_dev/project/tools/gemspec/packer'
 gemspec_reader:  'swag_dev/project/tools/gemspec/reader'
