--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -6,6 +6,7 @@ gemspec_reader:  'swag_dev/project/tools/gemspec/reader'
 gemspec_writer:  'swag_dev/project/tools/gemspec/writer'
 licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
+rubocop:         'swag_dev/project/tools/rubocop'
 vagrant:         'swag_dev/project/tools/vagrant'
 yardoc:          'swag_dev/project/tools/yardoc'
 yardoc_watcher:  'swag_dev/project/tools/yardoc/watcher'
