Style/WordArray (rubocop) disabled

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,5 +24,6 @@ Style/RedundantReturn: { Enabled: false }
 Style/RedundantSelf: { Enabled: false }
 Style/Send: { Enabled: true }
 Style/SymbolArray: { Enabled: false }
+Style/WordArray: { Enabled: false }
 Style/TrailingCommaInLiteral: { Enabled: false }
 Style/YodaCondition: { Enabled: false }
