--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -4,6 +4,7 @@ gemspec_builder: 'swag_dev/project/tools/gemspec/builder'
 gemspec_packer:  'swag_dev/project/tools/gemspec/packer'
 gemspec_reader:  'swag_dev/project/tools/gemspec/reader'
 gemspec_writer:  'swag_dev/project/tools/gemspec/writer'
+git:             'swag_dev/project/tools/git'
 licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
 rubocop:         'swag_dev/project/tools/rubocop'
