--- a/lib/swag_dev/project/resources/Vagrantfile
+++ b/lib/swag_dev/project/resources/Vagrantfile
@@ -1,55 +1,80 @@
 # frozen_string_literal: true
+
 # This file is used as a kind of template,
 # ``boxes`` variable is defined at runtime.
 #
 # Vagrant does not cohabitate well with bundler,
 # this setup avoid to load any project sources.
 #
-# @see SwagDev::Project::Tools::VagrantHelper
+# @see SwagDev::Project::Tools::Vagrant
 
+# synced folders -----------------------------------------------------
+synced_folder_config = lambda do |config, box_config|
+  return unless box_config['synced_folder']
+
+  config.vm.public_send(:synced_folder,
+                        *(box_config['synced_folder'][0] || []),
+                        **(box_config['synced_folder'][1] || {}))
+end
+
+# providers config ---------------------------------------------------
+providers_config = lambda do |config, providers|
+  (providers || {}).each do |provider, provider_config|
+    config.vm.provider provider do |vb|
+      provider_config.each do |pc_type, pconfigs|
+        next unless ['vm', 'customize'].include?(pc_type)
+
+        pconfigs.each do |c|
+          c = ['customize', [c], {}] if pc_type == 'customize'
+
+          configurable = vb if pc_type == 'customize'
+          configurable = config.vm if pc_type == 'vm'
+
+          configurable.public_send(c[0], *(c[1]), **(c[2] || {}))
+        end
+      end
+    end
+  end
+end
+
+# machine config -----------------------------------------------------
+machine_config = lambda do |config, name, box_config, &block|
+  config.vm.define name, autostart: false do |machine|
+    machine.vm.box = box_config.fetch('image')
+
+    block&.call(machine)
+  end
+end
+
+# machine provisions -------------------------------------------------
+machine_provisions_config = lambda do |machine, provisions|
+  (provisions || {}).each do |provision|
+    machine.vm.public_send(:provision, *(provision[0]), **(provision[1]))
+  end
+end
+
+# machine vm config -------------------------------------------------
+machine_vm_config = lambda do |machine, box_config|
+  box_config.each do |k, v|
+    next unless ['provision', 'guest'].include?(k)
+
+    if v.is_a?(Array)
+      machine.vm.public_send(k, *(v[0]), **(v[1]))
+    else # settings
+      machine.vm.public_send("#{k}=", v)
+    end
+  end
+end
+
+# configure ----------------------------------------------------------
 Vagrant.configure(2) do |config|
   boxes.each do |box, box_config|
-    if box_config['synced_folder']
-      config.vm.public_send(:synced_folder,
-                            *(box_config['synced_folder'][0] || []),
-                            **(box_config['synced_folder'][1] || {}))
-    end
+    synced_folder_config.call(config, box_config)
+    providers_config.call(config, box_config['providers'])
 
-    machine_name = box
-    config.vm.define machine_name, autostart: false do |machine|
-      machine.vm.box = box_config.fetch('image')
-
-      (box_config['providers'] || {})
-        .each do |provider, provider_config|
-        config.vm.provider provider do |vb|
-          provider_config.each do |pc_type, pconfigs|
-            next unless ['vm', 'customize'].include?(pc_type)
-
-            pconfigs.each do |c|
-              c = ['customize', [c], {}] if pc_type == 'customize'
-
-              configurable = vb if pc_type == 'customize'
-              configurable = config.vm if pc_type == 'vm'
-
-              configurable.public_send(c[0], *(c[1]), **(c[2] || {}))
-            end
-          end
-        end
-      end
-
-      (box_config['provisions'] || {}).each do |provision|
-        machine.vm.public_send(:provision, *(provision[0]), **(provision[1]))
-      end
-
-      box_config.each do |k, v|
-        next unless ['provision', 'guest'].include?(k)
-
-        if v.is_a?(Array)
-          machine.vm.public_send(k, *(v[0]), **(v[1]))
-        else # settings
-          machine.vm.public_send("#{k}=", v)
-        end
-      end
+    machine_config.call(config, box, box_config) do |machine|
+      machine_provisions_config.call(machine, box_config['provisions'])
+      machine_vm_config.call(machine, box_config)
     end
   end
 end
