Vagrantfile (resources) major changes, SHOULD be tested

--- a/vagrant/freebsd.yml
+++ b/vagrant/freebsd.yml
@@ -2,11 +2,23 @@
 # @see https://groups.google.com/forum/#!topic/vagrant-up/dNnloUOVCI4
 ---
 image: 'bento/freebsd-11.0'
+provider: :virtualbox
 guest: :freebsd
-network:
-  - 'private_network'
-  - :type: 'dhcp'
-    :adapter: 2
+modifyvm:
+  - ['memory', 128]
+  - ['cpus', 1]
+  - ['cpuexecutioncap', 80]
+  - ['hwvirtex', 'on']
+  - ['audio', 'none']
+  - ['vram', 1]
+  - ['vrde', 'off']
+  - ['nictype1', 'virtio']
+  - ['nictype2', 'virtio']
+  - ['cableconnected1', 'on']
+networks:
+  - - ['private_network']
+    - :type: 'dhcp'
+      :adapter: 2
 synced_folders:
   - :folders: ['.', '/vagrant']
     :type: 'rsync'
@@ -37,34 +49,13 @@ synced_folders:
     :rsync__auto: true
     :rsync__exclude: ['.#*', '*_flymake.*']
 provisions:
-  - ['file', {
-      !ruby/symbol source: 'vagrant/freebsd/bashrc.sh',
-      !ruby/symbol destination: '/home/vagrant/.bashrc',
-    }]
-  - ['file', {
-      !ruby/symbol source: 'vagrant/freebsd/vimrc',
-      !ruby/symbol destination: '/home/vagrant/.vim/vimrc',
-    }]
-  - ['shell', {
-      !ruby/symbol path: 'vagrant/freebsd/provision.sh'
-    }]
-providers:
-  virtualbox:
-    vm:
-      - ['network', ['private_network'], {
-          !ruby/symbol type: 'dhcp',
-          !ruby/symbol adapter: 2,
-        }]
-    customize:
-      - ['modifyvm', !ruby/symbol id, '--memory', 128]
-      - ['modifyvm', !ruby/symbol id, '--cpus', 1]
-      - ['modifyvm', !ruby/symbol id, '--cpuexecutioncap', 80]
-      - ['modifyvm', !ruby/symbol id, '--hwvirtex', 'on']
-      - ['modifyvm', !ruby/symbol id, '--audio', 'none']
-      - ['modifyvm', !ruby/symbol id, '--vram', 1]
-      - ['modifyvm', !ruby/symbol id, '--vrde', 'off']
-      - ['modifyvm', !ruby/symbol id, '--nictype1', 'virtio']
-      - ['modifyvm', !ruby/symbol id, '--nictype2', 'virtio']
-      - ['modifyvm', !ruby/symbol id, '--cableconnected1', 'on']
+  - :type: :file
+    :source: 'vagrant/freebsd/bashrc.sh'
+    :destination: '/home/vagrant/.bashrc'
+  - :type: :file
+    :source: 'vagrant/freebsd/vimrc'
+    :destination: '/home/vagrant/.vim/vimrc'
+  - :type: :shell
+    :path: 'vagrant/freebsd/provision.sh'
 ssh_commands:
   rspec: 'bash -cl ". .env && bundle exec rspec"'
