--- a/lib/swag_dev/project/resources/Vagrantfile
+++ b/lib/swag_dev/project/resources/Vagrantfile
@@ -10,27 +10,22 @@
 # synced folders -----------------------------------------------------
 synced_folders_config = lambda do |config, box_config|
   (box_config['synced_folders'] || []).each do |s|
-    folders = s.delete(:folders) || []
+    folders = s.delete(:folders)
 
-    config.vm.public_send(:synced_folder, *folders, **s)
+    config.vm.synced_folder(*folders, **s) if folders
   end
 end
 
-# providers config ---------------------------------------------------
-providers_config = lambda do |config, providers|
-  (providers || {}).each do |provider, provider_config|
-    config.vm.provider provider do |vb|
-      provider_config.each do |pc_type, pconfigs|
-        next unless ['vm', 'customize'].include?(pc_type)
+# modifyvm config ----------------------------------------------------
+modifyvm_config = lambda do |config, box_config|
+  provider = box_config.fetch('provider')
+  modifyvm = box_config['modifyvm']
 
-        pconfigs.each do |c|
-          c = ['customize', [c], {}] if pc_type == 'customize'
+  (modifyvm || []).each do |c|
+    config.vm.provider(provider) do |v|
+      c[0] = "--#{c[0]}" if c[0] and c[0].slice(0, 2) != '--'
 
-          { customize: vb, vm: config.vm }
-            .fetch(pc_type.to_sym)
-            .public_send(c[0], *(c[1]), **(c[2] || {}))
-        end
-      end
+      v.customize(['modifyvm', :id] + c.map(&:to_s))
     end
   end
 end
@@ -44,12 +39,20 @@ machine_config = lambda do |config, name, box_config, &block|
   end
 end
 
-# machine provisions -------------------------------------------------
-machine_provisions_config = lambda do |machine, provisions|
-  (provisions || {}).each do |provision|
-    provision[0] = [provision[0]] unless provision[0].is_a?(Array)
+# machine networks config ---------------------------------------------
+machine_networks_config = lambda do |machine, box_config|
+  (box_config['networks'] || []).each do |c|
+    machine.vm.network(*(c[0] || []), **(c[1] || {}))
+  end
+end
 
-    machine.vm.public_send(:provision, *(provision[0]), **(provision[1]))
+# machine provisions -------------------------------------------------
+machine_provisions_config = lambda do |machine, box_config|
+  provisions = box_config['provisions']
+  (provisions || []).each do |provision|
+    type = provision.delete(:type)&.to_s
+
+    machine.vm.provision(type, **provision)
   end
 end
 
@@ -57,11 +60,12 @@ end
 Vagrant.configure(2) do |config|
   boxes.each do |box, box_config|
     synced_folders_config.call(config, box_config)
-    providers_config.call(config, box_config['providers'])
+    modifyvm_config.call(config, box_config)
 
     machine_config.call(config, box, box_config) do |machine|
       machine.vm.guest = box_config['guest'] if box_config['guest']
-      machine_provisions_config.call(machine, box_config['provisions'])
+      machine_networks_config.call(machine, box_config)
+      machine_provisions_config.call(machine, box_config)
     end
   end
 end
