freebsd (vagrant) not privileged on bundle installation

--- a/vagrant/freebsd.yml
+++ b/vagrant/freebsd.yml
@@ -71,6 +71,7 @@ provisions:
     :preserve_order: true
     :path: 'vagrant/freebsd/provisions/rvm.sh'
   - :type: :shell
+    :privileged: false
     :preserve_order: true
     :path: 'vagrant/freebsd/provisions/bundle.sh'
   - :type: :shell
