--- a/vagrant/freebsd.yml
+++ b/vagrant/freebsd.yml
@@ -71,14 +71,15 @@ provisions:
     :preserve_order: true
     :path: 'vagrant/freebsd/provisions/rvm.sh'
   - :type: :shell
-    :privileged: false
-    :preserve_order: true
-    :path: 'vagrant/freebsd/provisions/bundle.sh'
-  - :type: :shell
     :run: always
     :preserve_order: true
-    :path: 'vagrant/freebsd/provisions/bin.sh'
+    :path: 'vagrant/freebsd/provisions/files-bin.sh'
+  - :type: :shell
+    :privileged: false
+    :preserve_order: true
+    :inline: 'vsh bundle install --frozen'
 ssh:
   aliases:
-    rake:  'remote bundle exec rake'
-    rspec: 'remote bundle exec rspec'
+    bundle: 'vsh bundle'
+    rake:   'vsh bundle exec rake'
+    rspec:  'vsh bundle exec rspec'
