SILENCE_DUPLICATE_DIRECTORY_ERRORS (env) added

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@
 export PROJECT_NAME='swag_dev-project'
 export PROJECT_MODE='development'
 export CPPFLAGS='-P'
+export SILENCE_DUPLICATE_DIRECTORY_ERRORS='true'
 
 # Local Variables:
 # mode: sh
