--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -8,6 +8,7 @@ git:             'swag_dev/project/tools/git'
 licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
 rubocop:         'swag_dev/project/tools/rubocop'
+shell:           'swag_dev/project/tools/shell'
 vagrant:         'swag_dev/project/tools/vagrant'
 yardoc:          'swag_dev/project/tools/yardoc'
 yardoc_watcher:  'swag_dev/project/tools/yardoc/watcher'
