config/tools (resources) rspec added

--- a/lib/swag_dev/project/resources/config/tools.yml
+++ b/lib/swag_dev/project/resources/config/tools.yml
@@ -7,6 +7,7 @@ gemspec_writer:  'swag_dev/project/tools/gemspec/writer'
 git:             'swag_dev/project/tools/git'
 licenser:        'swag_dev/project/tools/licenser'
 process_locker:  'swag_dev/project/tools/process_locker'
+rspec:           'swag_dev/project/tools/rspec'
 rubocop:         'swag_dev/project/tools/rubocop'
 shell:           'swag_dev/project/tools/shell'
 vagrant:         'swag_dev/project/tools/vagrant'
