--- a/lib/swag_dev/project/resources/Vagrantfile
+++ b/lib/swag_dev/project/resources/Vagrantfile
@@ -66,6 +66,18 @@ machine_networks_config = lambda do |machine, box_config|
   end
 end
 
+# machine config vm --------------------------------------------------
+# @see https://www.vagrantup.com/docs/vagrantfile/machine_settings.html
+machine_vm_config = lambda do |machine, box_config|
+  ['guest', 'hostname', 'communicator'].each do |k|
+    next unless box_config.member?(k)
+
+    box_config.fetch(k).tap do |v|
+      machine.vm.public_send("#{k}=", v)
+    end
+  end
+end
+
 # machine provisions -------------------------------------------------
 machine_provisions_config = lambda do |machine, box_config|
   provisions = box_config['provisions']
@@ -106,8 +118,8 @@ Vagrant.configure(2) do |config|
     synced_folders_config.call(config, box_config)
 
     machine_config.call(config, box, box_config) do |machine|
-      machine.vm.guest = box_config['guest'] if box_config['guest']
       machine_networks_config.call(machine, box_config)
+      machine_vm_config.call(machine, box_config)
       machine_provisions_config.call(machine, box_config)
     end
   end
