--- a/lib/kamaze/project/version.yml
+++ b/lib/kamaze/project/version.yml
@@ -1,14 +1,14 @@
 ---
-major: 0
+major: 1
 minor: 0
-patch: 1
+patch: 0
 authors: ['Dimitri Arrigoni']
 email: 'dimitri@arrigoni.me'
 date: '2017-08-06'
 summary: 'Automatize recurrent dev tasks with swag'
-description: 'Provides a bunch of (rake) tasks to automatize with swag'
+description: 'A bunch of (rake) tasks to automatize ypur development workflow with swag'
 licenses: ['GPL-3.0']
-license_header: 'Copyright (C) 2017 Dimitri Arrigoni <dimitri@arrigoni.me>
+license_header: 'Copyright (C) 2017-2018 Dimitri Arrigoni <dimitri@arrigoni.me>
 License GPLv3+: GNU GPL version 3 or later
 <http://www.gnu.org/licenses/gpl.html>.
 This is free software: you are free to change and redistribute it.
