--- a/lib/kamaze/project/version.yml
+++ b/lib/kamaze/project/version.yml
@@ -8,9 +8,10 @@ date: '2017-08-06'
 summary: 'Automatize recurrent dev tasks with swag'
 description: 'A bunch of (rake) tasks to automatize ypur development workflow with swag'
 licenses: ['GPL-3.0']
-license_header: 'Copyright (C) 2017-2018 Dimitri Arrigoni <dimitri@arrigoni.me>
-License GPLv3+: GNU GPL version 3 or later
-<http://www.gnu.org/licenses/gpl.html>.
-This is free software: you are free to change and redistribute it.
-There is NO WARRANTY, to the extent permitted by law.'
+license_header: |
+  Copyright (C) 2017-2018 Dimitri Arrigoni <dimitri@arrigoni.me>
+  License GPLv3+: GNU GPL version 3 or later
+  <http://www.gnu.org/licenses/gpl.html>.
+  This is free software: you are free to change and redistribute it.
+  There is NO WARRANTY, to the extent permitted by law.
 homepage: 'https://github.com/SwagDevOps/kamaze-project'
