--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,9 @@ Style/ClassAndModuleChildren: { Enabled: false }
 Style/DoubleNegation: { Enabled: false }
 Style/Encoding: { Enabled: false }
 Style/FormatString: { Enabled: false }
+Style/HashEachMethods: { Enabled: true }
+Style/HashTransformKeys: { Enabled: true }
+Style/HashTransformValues: { Enabled: true }
 Style/IfUnlessModifier: { Enabled: false }
 Style/MultilineBlockChain: { Enabled: false }
 Style/RedundantReturn: { Enabled: false }
