--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@
 ---
 AllCops: { DisplayCopNames: true, TargetRubyVersion: 2.5 }
 Layout/EmptyLineAfterMagicComment: { Enabled: false }
+Layout/EmptyLinesAroundAttributeAccessor: { Enabled: true }
 Layout/LineLength: { Max: 120 }
 Layout/SpaceAroundMethodCallOperator: { Enabled: true }
 Lint/RaiseException: { Enabled: true }
@@ -43,6 +44,7 @@ Style/RedundantReturn: { Enabled: false }
 Style/RedundantSelf: { Enabled: false }
 Style/Send: { Enabled: true }
 Style/SymbolArray: { Enabled: false }
+Style/SlicingWithRange: { Enabled: false }
 Style/WordArray: { Enabled: false }
 Style/TrailingCommaInArrayLiteral: { Enabled: false }
 Style/TrailingCommaInHashLiteral: { Enabled: false }
