--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,8 @@ Layout/EmptyLineAfterMagicComment: { Enabled: false }
 Layout/EmptyLinesAroundAttributeAccessor: { Enabled: true }
 Layout/LineLength: { Max: 120 }
 Layout/SpaceAroundMethodCallOperator: { Enabled: true }
+Lint/DeprecatedOpenSSLConstant: { Enabled: true }
+Lint/MixedRegexpCaptureTypes: { Enabled: true }
 Lint/RaiseException: { Enabled: true }
 Lint/StructNewOverride: { Enabled: true }
 Lint/UnusedBlockArgument: { Enabled: false }
@@ -40,12 +42,14 @@ Style/HashTransformKeys: { Enabled: true }
 Style/HashTransformValues: { Enabled: true }
 Style/IfUnlessModifier: { Enabled: false }
 Style/MultilineBlockChain: { Enabled: false }
+Style/RedundantRegexpCharacterClass: { Enabled: true }
+Style/RedundantRegexpEscape: { Enabled: true }
 Style/RedundantReturn: { Enabled: false }
 Style/RedundantSelf: { Enabled: false }
 Style/Send: { Enabled: true }
-Style/SymbolArray: { Enabled: false }
 Style/SlicingWithRange: { Enabled: false }
-Style/WordArray: { Enabled: false }
+Style/SymbolArray: { Enabled: false }
 Style/TrailingCommaInArrayLiteral: { Enabled: false }
 Style/TrailingCommaInHashLiteral: { Enabled: false }
+Style/WordArray: { Enabled: false }
 Style/YodaCondition: { Enabled: false }
