--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,16 +15,33 @@
 #    - .rubocop.yml
 # ```
 ---
-AllCops: { DisplayCopNames: true, TargetRubyVersion: 2.5 }
+AllCops: { DisplayCopNames: true, TargetRubyVersion: 2.5, SuggestExtensions: false }
 Layout/BlockAlignment: { EnforcedStyleAlignWith: start_of_block }
 Layout/EmptyLineAfterMagicComment: { Enabled: false }
 Layout/EmptyLinesAroundAttributeAccessor: { Enabled: true }
 Layout/LineLength: { Max: 120 }
 Layout/SpaceAroundMethodCallOperator: { Enabled: true }
+Layout/SpaceBeforeBrackets: { Enabled: true }
+Lint/AmbiguousAssignment: { Enabled: true }
+Lint/DeprecatedConstants: { Enabled: true }
 Lint/DeprecatedOpenSSLConstant: { Enabled: true }
+Lint/DuplicateBranch: { Enabled: true }
+Lint/DuplicateRegexpCharacterClassElement: { Enabled: true }
+Lint/EmptyBlock: { Enabled: true }
+Lint/EmptyClass: { Enabled: true, AllowComments: true }
+Lint/LambdaWithoutLiteralBlock: { Enabled: true }
 Lint/MixedRegexpCaptureTypes: { Enabled: true }
+Lint/NoReturnInBeginEndBlocks: { Enabled: true }
+Lint/NumberedParameterAssignment: { Enabled: true }
+Lint/OrAssignmentToConstant: { Enabled: true }
 Lint/RaiseException: { Enabled: true }
+Lint/RedundantDirGlobSort: { Enabled: false } # @see https://docs.rubocop.org/rubocop/cops_lint.html#lintredundantdirglobsort
 Lint/StructNewOverride: { Enabled: true }
+Lint/SymbolConversion: { Enabled: true }
+Lint/ToEnumArguments: { Enabled: true }
+Lint/TripleQuotes: { Enabled: true }
+Lint/UnexpectedBlockArity: { Enabled: true }
+Lint/UnmodifiedReduceAccumulator: { Enabled: true }
 Lint/UnusedBlockArgument: { Enabled: false }
 Metrics/AbcSize: { Max: 20 }
 Metrics/ClassLength: { CountComments: false }
@@ -33,16 +50,25 @@ Metrics/MethodLength: { CountComments: false, Max: 10 }
 Metrics/ModuleLength: { CountComments: false }
 Naming/MemoizedInstanceVariableName: { Enabled: false }
 Style/AndOr: { Enabled: false }
+Style/ArgumentsForwarding: { Enabled: true }
 Style/ClassAndModuleChildren: { Enabled: false }
+Style/CollectionCompact: { Enabled: true }
+Style/DocumentDynamicEvalDefinition: { Enabled: false }
 Style/DoubleNegation: { Enabled: false }
 Style/Encoding: { Enabled: false }
+Style/EndlessMethod: { Enabled: false } # @see https://docs.rubocop.org/rubocop/cops_style.html#styleendlessmethod
 Style/ExponentialNotation: { Enabled: true, EnforcedStyle: scientific }
 Style/FormatString: { Enabled: false }
 Style/HashEachMethods: { Enabled: true }
+Style/HashExcept: { Enabled: true }
 Style/HashTransformKeys: { Enabled: true }
 Style/HashTransformValues: { Enabled: true }
 Style/IfUnlessModifier: { Enabled: false }
+Style/IfWithBooleanLiteralBranches: { Enabled: true }
 Style/MultilineBlockChain: { Enabled: false }
+Style/NegatedIfElseCondition: { Enabled: true }
+Style/NilLambda: { Enabled: true }
+Style/RedundantArgument: { Enabled: true }
 Style/RedundantRegexpCharacterClass: { Enabled: true }
 Style/RedundantRegexpEscape: { Enabled: true }
 Style/RedundantReturn: { Enabled: false }
@@ -50,6 +76,7 @@ Style/RedundantSelf: { Enabled: false }
 Style/Send: { Enabled: true }
 Style/SlicingWithRange: { Enabled: false }
 Style/StringConcatenation: { Enabled: true }
+Style/SwapValues: { Enabled: true }
 Style/SymbolArray: { Enabled: false }
 Style/TrailingCommaInArrayLiteral: { Enabled: false }
 Style/TrailingCommaInHashLiteral: { Enabled: false }
