feat(rubocop): add new rules

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -16,6 +16,8 @@
 # ```
 ---
 inherit_from:
+  - ./rubocop/bundler.yml
+  - ./rubocop/gemspec.yml
   - ./rubocop/layout.yml
   - ./rubocop/lint.yml
   - ./rubocop/metrics.yml
