--- a/rubocop/style.yml
+++ b/rubocop/style.yml
@@ -10,23 +10,29 @@ Style/Encoding: { Enabled: false }
 Style/EndlessMethod: { Enabled: false } # @see https://docs.rubocop.org/rubocop/cops_style.html#styleendlessmethod
 Style/ExponentialNotation: { Enabled: true, EnforcedStyle: scientific }
 Style/FormatString: { Enabled: false }
+Style/HashConversion: { Enabled: true, AllowSplatArgument: true }
 Style/HashEachMethods: { Enabled: true }
 Style/HashExcept: { Enabled: true }
 Style/HashTransformKeys: { Enabled: true }
 Style/HashTransformValues: { Enabled: true }
 Style/IfUnlessModifier: { Enabled: false }
 Style/IfWithBooleanLiteralBranches: { Enabled: true }
+Style/InPatternThen: { Enabled: true }
 Style/MultilineBlockChain: { Enabled: false }
+Style/MultilineInPatternThen: { Enabled: true }
 Style/NegatedIfElseCondition: { Enabled: true }
 Style/NilLambda: { Enabled: true }
+Style/QuotedSymbols: { Enabled: true }
 Style/RedundantArgument: { Enabled: true }
 Style/RedundantRegexpCharacterClass: { Enabled: true }
 Style/RedundantRegexpEscape: { Enabled: true }
 Style/RedundantReturn: { Enabled: false }
 Style/RedundantSelf: { Enabled: false }
+Style/RedundantSelfAssignmentBranch: { Enabled: true }
 Style/Send: { Enabled: true }
 Style/SlicingWithRange: { Enabled: false }
 Style/StringConcatenation: { Enabled: true }
+Style/StringChars: { Enabled: true }
 Style/SwapValues: { Enabled: true }
 Style/SymbolArray: { Enabled: false }
 Style/TrailingCommaInArrayLiteral: { Enabled: false }
